--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,5 @@
 .myself .card
 {
-    background-image: url('../img/BRAIN.png');
-    background-size: 80%;
-    background-position: center;
-    background-repeat: no-repeat;
     /*background-color: rgba(0, 0, 0, 0.1);*/
 
     padding-top: 2.5%;
@@ -12,26 +8,55 @@
     padding-bottom: 2.5%;
 }
 
-.myself .summary{
-    padding-left: 5%; 
-}
-
-.myself p
-{
-    font-size: 1.4rem;
-    float: right;
-    width: 75%;
-}
 .myself .me_nsf
 {
     float: left;
     width: 20%;
     margin-top: auto;
-    padding-top: auto;
-    padding-bottom: auto;
     margin-bottom: auto;
 }
 
+.myself .title
+{
+    font-size: 1.4rem;
+}
+
+.myself .description
+{
+    font-size: 1.2rem;
+}
+
+/*.myself #brain
+{
+    background-image: url('../img/BRAIN.png');
+    background-size: 50%;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+*/
+.myself #content
+{
+    /*float: right;*/
+    /*padding-left: 20%;*/
+    margin-left: 25%;
+}
+.myself p#conclusion
+{
+    /*padding-top: 3%;*/
+    /*width: 75%;*/
+    font-size: 1.4rem;
+}
+
+.myself a:hoover
+{
+    font-size: 1.5rem;
+}
+/*.myself .summary{
+    padding-left: 5%; 
+}*/
+
+
+/*
 .about .col
 {
     margin-bottom: 24px;
@@ -59,4 +84,4 @@
 .about a:hover {
     font-weight: 900;
 
-}
+}*/
