--- a/css/styles.css
+++ b/css/styles.css
@@ -107,6 +107,23 @@ body, html
 }
 
 .footer {
-    padding-left: 5%;
-    padding-right: 5%;
+    padding-top: 2%;
+    padding-bottom: 1%;
+    padding-left: 4%;
+    padding-right: 2%;
+    color: white;
+}
+
+.footer img{
+    float: top;
+    width: 96px;
+    height: 96px;
+}
+
+.footer a{
+    float: bottom;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    font-size: 1.3rem;
 }
