--- a/css/index.css
+++ b/css/index.css
@@ -40,7 +40,7 @@
     /*padding-left: 20%;*/
     margin-left: 25%;
 }
-.myself p#conclusion
+.myself p.conclusion
 {
     /*padding-top: 3%;*/
     /*width: 75%;*/
