--- a/css/styles.css
+++ b/css/styles.css
@@ -85,3 +85,12 @@ body, html
     text-align: center;
     font-size: 1.3rem;
 }
+
+.page-footer {
+    background-color: #EDEDED !important;
+}
+
+.footer-copyright{
+    font-size: 1.1rem;
+    text-align: center;
+}
