--- a/css/blog.css
+++ b/css/blog.css
@@ -15,14 +15,14 @@
 {
     /*background-color: rgba(0, 0, 0, 0.1);*/
     font-size: 1.3rem;
-    padding-top: 2.5%;
-    padding-left: 10%;
-    padding-right: 10%;
-    padding-bottom: 2.5%;
+    padding-top: 2%;
+    padding-left: 8%;
+    padding-right: 8%;
+    padding-bottom: 2%;
 }
 
 .container h4
 {
-  text-align: center;
+/*  text-align: center;
   padding-bottom: 3%;
-}
+*/}
