--- a/css/blog_post.css
+++ b/css/blog_post.css
@@ -17,10 +17,10 @@
 .regular{
     text-align: center;
 }
-.regular img{
-    width: 80%;
+.regular{
+    max-height: 500px;
 }
 
 .materialboxed .initialized .active {
-    width: 150%;
+    max-height: 1500px;
 }
