--- a/css/index.css
+++ b/css/index.css
@@ -10,8 +10,8 @@
 
 .myself .me_nsf
 {
-    float: left;
-    width: 20%;
+    
+    
     margin-top: auto;
     margin-bottom: auto;
 }
@@ -37,8 +37,11 @@
 .myself #content
 {
     /*float: right;*/
-    /*padding-left: 20%;*/
-    margin-left: 25%;
+    padding-top: 0%;
+    margin-top: 0%;
+    margin-left: 5%;
+    font-size: 1.3rem;
+
 }
 .myself p.conclusion
 {
